# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_prebuilt_etc("mdnsmanager_trust") {
  source = "mdnsmanager_trust.json"
  module_install_dir = "profile"
  part_name = "netmanager_ext"
  subsystem_name = "communication"
}

## Install mdnsmanager.rc/mdnsmanager.rc to /system/etc/init

ohos_prebuilt_etc("mdnsmanager.rc") {
  source = "mdnsmanager.cfg"
  relative_install_dir = "init"
  part_name = "netmanager_ext"
  subsystem_name = "communication"
}

ohos_prebuilt_etc("vpnmanager.cfg") {
  source = "vpnmanager.cfg"
  relative_install_dir = "init"
  part_name = "netmanager_ext"
  subsystem_name = "communication"
}

ohos_prebuilt_etc("UrspConfig_xml") {
  source = "UrspConfig1.xml"
  module_install_dir = "profile"
  part_name = "netmanager_ext"
  subsystem_name = "communication"
}

ohos_prebuilt_etc("UrspConfig2_xml") {
  source = "UrspConfig2.xml"
  module_install_dir = "profile"
  part_name = "netmanager_ext"
  subsystem_name = "communication"
}

ohos_prebuilt_etc("reportUrsp") {
  source = "reportUrsp.json"
  module_install_dir = "profile"
  part_name = "netmanager_ext"
  subsystem_name = "communication"
}
