# Copyright (C) 2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/components/ets_frontend/ets2abc_config.gni")
import("//build/ohos.gni")
import("//foundation/communication/netmanager_ext/netmanager_ext_config.gni")

rust_cxx("ethernet_ani_cxx") {
  sources = [ "src/wrapper.rs" ]
}

ohos_static_library("ethernet_ani_static") {
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  cflags = [
    "-fdata-sections",
    "-ffunction-sections",
    "-O3",
    "-flto",
    "-fno-exceptions",
    "-fno-rtti",
  ]

  branch_protector_ret = "pac_ret"

  include_dirs = [
    "include",
    "${target_gen_dir}/src",
  ]
  sources = [ "src/cxx/ethernet_ani.cpp" ]
  sources += get_target_outputs(":ethernet_ani_cxx")

  if (netmanager_ext_feature_net_firewall) {
    defines = [ "NETMANAGER_EXT_ETHERNET_ENABLE_DISABLE" ]
  }
  
  deps = [
    ":ethernet_ani_cxx",
    "../../../../interfaces/innerkits/ethernetclient:ethernet_manager_if",
    "../../../../interfaces/innerkits/ethernetclient:ethernet_parcel",
  ]
  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_core",
    "samgr:samgr_proxy",
    "rust_cxx:cxx_cppdeps",
    "netmanager_base:net_manager_common"
  ]

  part_name = "netmanager_ext"
  subsystem_name = "communication"
}

ohos_rust_shared_library("ethernet_ani") {
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  ldflags = [
    "-Wl,--exclude-libs=ALL",
    "-Wl,--gc-sections",
    "-Wl,--strip-all",
    "-flto",
  ]

  rustflags = [
    "-C", "opt-level=3",
    "-C", "debuginfo=0",
    "-C", "link-arg=-ffunction-sections",
    "-C", "link-arg=-fdata-sections",
    "-C", "link-arg=-Wl,--gc-sections",
    "-C", "link-arg=-Wl,--strip-all",
    "-Z", "dylib-lto",
    "-Z", "stack-protector=all",
    "-C", "codegen-units=1",
  ]

  sources = [ "src/lib.rs" ]
  
  external_deps = [
    "runtime_core:ani",
    "hilog:hilog_rust",
    "netmanager_base:ani_rs",
    "rust_cxx:lib"
  ]
  deps = [
    ":ethernet_ani_static",
    "//third_party/rust/crates/serde/serde:lib"
  ]
  clippy_lints = "none"
  part_name = "netmanager_ext"
  subsystem_name = "communication"
  output_extension = "so"
}

generate_static_abc("ethernet") {
  base_url = "./ets"
  files = [ "ets/@ohos.net.ethernet.ets" ]
  is_boot_abc = "True"
  device_dst_file = "/system/framework/ethernet.abc"
}

ohos_prebuilt_etc("ethernet_etc") {
  source = "$target_out_dir/ethernet.abc"
  module_install_dir = "framework"
  part_name = "netmanager_ext"
  subsystem_name = "communication"
  deps = [ ":ethernet" ]
}

