# Copyright (C) 2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/components/ets_frontend/ets2abc_config.gni")
import("//build/ohos.gni")

rust_cxx("vpnextension_ani_cxx") {
  sources = [ "src/wrapper.rs" ]
}

ohos_static_library("vpnextension_ani_static") {
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  cflags = [
    "-D_FORTIFY_SOURCE=2",
    "-fvisibility=hidden",
    "-fno-exceptions",
    "-fno-asynchronous-unwind-tables",
    "-fno-unwind-tables",
    "-fmerge-all-constants",
    "-Oz",
  ]

  cflags_cc = [
    "-D_FORTIFY_SOURCE=2",
    "-fvisibility=hidden",
    "-fvisibility-inlines-hidden",
    "-fno-exceptions",
    "-fno-rtti",
    "-fno-asynchronous-unwind-tables",
    "-fno-unwind-tables",
    "-fmerge-all-constants",
    "-Oz",
  ]

  branch_protector_ret = "pac_ret"

  include_dirs = [
    "include",
    "${target_gen_dir}/src",
  ]
  sources = [ "src/cxx/vpnextension_ani.cpp" ]
  sources += get_target_outputs(":vpnextension_ani_cxx")

  deps = [
    ":vpnextension_ani_cxx",
    "../../../../interfaces/innerkits/netvpnclient:net_vpn_manager_if",
  ]
  external_deps = [
    "ability_base:want",
    "ability_runtime:ability_connect_callback_stub",
    "ability_runtime:ability_manager",
    "bundle_framework:appexecfwk_base",
    "ipc:ipc_core",
    "netmanager_base:net_conn_manager_if",
    "netmanager_base:net_data_share",
    "os_account:os_account_innerkits",
    "samgr:samgr_proxy",
    "rust_cxx:cxx_cppdeps"
  ]

  part_name = "netmanager_ext"
  subsystem_name = "communication"
}

ohos_rust_shared_library("vpnextension_ani") {
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  sources = [ "src/lib.rs" ]

  external_deps = [
    "runtime_core:ani",
    "netmanager_base:ani_rs",
    "rust_cxx:lib",
  ]
  deps = [
    ":vpnextension_ani_static",
    "//third_party/rust/crates/serde/serde:lib"
  ]
  clippy_lints = "none"
  part_name = "netmanager_ext"
  subsystem_name = "communication"
  output_extension = "so"
  rustflags = [
    "-C", "codegen-units=1",
    "-C", "opt-level=z",
    "-C", "debuginfo=0",
    "-Zstack-protector=all",
    "-C", "link-arg=-Wl,--defsym=__build_id_start=0",
    "-C", "link-arg=-Wl,--defsym=__build_id_end=0",
  ]

  ldflags = [
    "-Wl,--exclude-libs=ALL",
    "-Wl,--gc-sections",
    "-Wl,-s",
    "-Wl,--strip-all",
    "-Wl,--discard-all",
    "-Wl,--no-export-dynamic",
    "-Wl,--icf=all",
  ]
}

generate_static_abc("vpnextension") {
  base_url = "./ets"
  files = [ "ets/@ohos.net.vpnExtension.ets" ]
  is_boot_abc = "True"
  device_dst_file = "/system/framework/vpnextension.abc"
}

ohos_prebuilt_etc("vpnextension_etc") {
  source = "$target_out_dir/vpnextension.abc"
  module_install_dir = "framework"
  part_name = "netmanager_ext"
  subsystem_name = "communication"
  deps = [ ":vpnextension" ]
}
