# Copyright (C) 2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/components/ets_frontend/ets2abc_config.gni")
import("//build/ohos.gni")

generate_static_abc("vpnextensionability_ani_abc") {
  base_url = "./ets"
  files = [ "ets/@ohos.app.ability.VpnExtensionAbility.ets" ]
  dst_file = "$target_out_dir/vpnextensionability.abc"
  out_puts = [ "$target_out_dir/vpnextensionability.abc" ]

  is_boot_abc = "True"
  device_dst_file = "/system/framework/vpnextensionability.abc"
}

ohos_prebuilt_etc("vpnextensionability_etc") {
  source = "$target_out_dir/vpnextensionability.abc"
  module_install_dir = "framework"
  part_name = "netmanager_ext"
  subsystem_name = "communication"
  deps = [ ":vpnextensionability_ani_abc" ]
}
